zeit.content.dynamicfolder changes
==================================


1.1.3 (unreleased)
------------------

- Nothing changed yet.


1.1.2 (2015-11-24)
------------------

- Register a workflow form for dynamic folders.


1.1.1 (2015-11-24)
------------------

- Configure a workflow for dynamic folders so they can be published.


1.1.0 (2015-09-29)
------------------

- Convert ``head/attribute`` XML nodes of the template into DAV properties.
  (This means we also support arbitrary content types via the meta:type
  attribute, and arbitrary interfaces via the meta:provides attribute.)


1.0.5 (2015-09-28)
------------------

- Handle templates both with vivi content-type ``rawxml`` and without.


1.0.4 (2015-09-21)
------------------

- Speed up configuration by appending included nodes at the end of the parent
  element instead of at precisely the position of the ``<include>`` node.


1.0.3 (2015-09-07)
------------------

- Decode non-ascii ``url_value`` correctly.


1.0.2 (2015-08-25)
------------------

- Use simplified folder view that does not instantiate all child objects
  (performance optimization).


1.0.1 (2015-06-09)
------------------

- Make text of content nodes available in template via the key `text`.


1.0.0 (2015-05-18)
------------------

- Initial release.