@@ -1,6 +1,7 @@
 <centerpage xmlns:cp="http://namespaces.zeit.de/CMS/cp" type="centerpage">
   <head>
      <attribute name="ressort" ns="http://namespaces.zeit.de/CMS/document">Deutschland</attribute>
+     <attribute name="html-meta-title" ns="http://namespaces.zeit.de/CMS/document">seo-title</attribute>
      <attribute name="provides" ns="http://namespaces.zeit.de/CMS/meta">&lt;pickle&gt;
  &lt;initialized_object&gt;
  &lt;klass&gt;
